--- a/Experiments/mcqgenerator.ipynb
+++ b/Experiments/mcqgenerator.ipynb
@@ -28,27 +28,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Key=os.getenv(\"OPENAI_KEY\")"
+    "KEY=os.getenv(\"OPENAI_KEY\")\n",
+    "# we dont have openai api key "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'KEY' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m llm\u001b[38;5;241m=\u001b[39mChatOpenAI(openai_api_key\u001b[38;5;241m=\u001b[39m\u001b[43mKEY\u001b[49m,model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-3.5-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m, temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'KEY' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# NO API KEY\n",
     "llm=ChatOpenAI(openai_api_key=KEY,model_name=\"gpt-3.5-turbo\", temperature=0.5)"
    ]
   },
