--- a/Experiments/mcqgenerator.ipynb
+++ b/Experiments/mcqgenerator.ipynb
@@ -209,6 +209,35 @@
     "print(f\"Completion Tokens:{cb.completion_tokens}\")\n",
     "print(f\"Total Cost:{cb.total_cost}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'05-13-2024-15-10-33.log'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "filename=f\"{datetime.now().strftime('%m-%d-%Y-%H-%M-%S')}.log\"\n",
+    "filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
